--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TecnoShop</title>
 <!-- Iconos --------------- -------------------------------------------------------------------------->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/css/registro.css">
     <link rel="stylesheet" href="assets/css/cardProducto.css">
     <link rel="stylesheet" href="assets/css/publicidadSlider.css">
-<!-- estilos de letra Googlefonts --------------------------------------------------------------------->
+<!-- estilos de letra Google fonts --------------------------------------------------------------------->
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 <!----------------------------------------------------------------------------------------------------->
 
@@ -90,16 +90,16 @@
             </div>
             <div class="slider-section">
                 <img id="imagen2" alt="">
-            </div>
+            </div> <!--La imagen debe ser 3.5 mas hacha que de altura ejemplo -> (850 * 240)-->
             <div class="slider-section">
                 <img id="imagen3" alt="">
             </div>
         </div>
-        <div class="btn-left">*</div>
-        <div class="btn-rigth">></div>
+        <i class='bx bxs-chevron-left btn-left'></i>
+        <i class='bx bxs-chevron-right btn-rigth'></i>
     </div>
 </section>
-<!-- Card Producto ------------------------------------------------------------------------------------>
+<!-- Card Producto ----------------------------------------------------------------------*---------------------->
 <div id="productos">
 </div>
 
