--- a/templates/assets/css/publicidadSlider.css
+++ b/templates/assets/css/publicidadSlider.css
@@ -1,4 +1,5 @@
 .container-carousel-publicidad{
+    width: 100%;
     margin-top: 60px; /*Es la medida de diferecias del NavBar*/
     display: flex;
     justify-content: center;
@@ -11,7 +12,7 @@
     position: relative;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: aqua;
     overflow: hidden;
 }
 
@@ -29,28 +30,62 @@
 .slider-section img{
     width: 100%;
     height: 100%;
+    cursor: pointer;
+    object-fit: cover;
 }
 
 .btn-left, .btn-rigth{
-    display: flex;
+    display: none;
     position: absolute;
     top: 50%;
-    font-size: 1.5rem;
-    background-color: transparent;
-    border-radius: 50%;
+    font-size: 50px;
     padding: 5px;
-    font-weight: 600;
     cursor: pointer;
-    color: rebeccapurple;
+    color: rgb(255, 255, 255);
     transform: translate(0,-50%);
-    transition: .5s ease;
     user-select: none;
+    background-color:#f7985d;
+    transition: all 0.6s ease;
 }
 
 .btn-left{
-    left: 10px
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    left: 0;
 }
 
 .btn-rigth{
-    right: 10px;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+    right: 0;
 }
+.btn-left:hover, .btn-rigth:hover{
+    background-color: #fc7e31;
+    transform: translate(0%, -50%) scale(1.1);
+}
+
+.container-carousel:hover .btn-left{ /*hace aparecer las fechas cuando se para en el contenedor*/
+    display: block;
+}
+.container-carousel:hover .btn-rigth{
+    display: block;
+}
+
+@media (max-width: 768px) {
+    .container-carousel-publicidad{
+        margin-top: 90px;
+    }
+    .container-carousel-publicidad{
+        height: 200px;
+    }
+}
+
+@media (max-width: 720px) {
+    .container-carousel:hover .btn-left{ /*hace aparecer las fechas cuando se para en el contenedor*/
+        display: none;
+    }
+    .container-carousel:hover .btn-rigth{
+        display: none;
+    }
+}
+
