--- a/templates/assets/css/index.css
+++ b/templates/assets/css/index.css
@@ -1,8 +1,9 @@
 html {
     font-family: 'Rubik', sans-serif;
+    background-color:#e4e4e4;
   }
 
-body {
+body, h1, h2, h3, h4 {
     margin: 0;
     border: 0;
     padding: 0;
@@ -14,4 +15,5 @@ a {
 }
 button{
     border: none;
+    cursor: pointer;
 }
