--- a/templates/assets/css/publicidadSlider.css
+++ b/templates/assets/css/publicidadSlider.css
@@ -5,14 +5,15 @@
     justify-content: center;
     align-items: center;
     height: 400px;
-    background-color: aqua;
+    background-color: white;
 }
 
 .container-carousel{
+    z-index: 2;
     position: relative;
     width: 100%;
     height: 100%;
-    background-color: aqua;
+    background-color: rgba(185, 185, 185, 0.452);
     overflow: hidden;
 }
 
@@ -44,7 +45,7 @@
     color: rgb(255, 255, 255);
     transform: translate(0,-50%);
     user-select: none;
-    background-color:#f7985d;
+    background-color:#586977;
     transition: all 0.6s ease;
 }
 
@@ -60,15 +61,22 @@
     right: 0;
 }
 .btn-left:hover, .btn-rigth:hover{
-    background-color: #fc7e31;
+    background-color: #0c2941;
     transform: translate(0%, -50%) scale(1.1);
 }
 
 .container-carousel:hover .btn-left{ /*hace aparecer las fechas cuando se para en el contenedor*/
     display: block;
 }
+
 .container-carousel:hover .btn-rigth{
     display: block;
+}
+
+.mensaje_carga {
+    z-index: 1;
+    position: absolute;
+    color: #fc7e31;
 }
 
 @media (max-width: 768px) {
