--- a/templates/assets/css/registro.css
+++ b/templates/assets/css/registro.css
@@ -23,6 +23,7 @@
     height: 500px;
     box-shadow: 8px 10px 10px -6px rgb(63, 63, 63);
     transition: width 0.5s ease;
+    border-radius: 2%;
 }
 
 .cerrarRegistro{
